--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,6 +1,12 @@
 [supervisord]
 nodaemon=true
 
+[program:startup]
+command=/bin/bash /root/init.sh
+startsecs = 0
+autorestart = false
+startretries = 1
+
 [program:cron]
 command=/usr/sbin/cron -f
 numprocs=1
