--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -14,7 +14,7 @@ autostart=true
 autorestart=true
 
 [program:php-fpm7.0]
-command=/usr/sbin/php-fpm7.0 -F
+command=/usr/sbin/php-fpm7.0 -FR
 numprocs=1
 autostart=true
 autorestart=true
